--- a/package.json
+++ b/package.json
@@ -3,12 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mui/styled-engine-sc": "^5.8.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^4.21.7",
+    "boxicons": "^2.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-ionicons": "^4.2.0",
+    "react-multi-carousel": "^2.8.2",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
+    "react-type-animation": "^1.1.3",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^5.3.5",
+    "swiper": "^8.3.1",
+    "uninstall": "^0.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -34,5 +45,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.14",
+    "postcss-import": "^14.1.0",
+    "tailwindcss": "^3.1.6"
   }
 }
